--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
         <div class="row p-3 justify-content-center">
           <div class="col-6">
             <div class="mb-3">
-              <label for="name" class="form-label">Nama Lengkap</label>
+              <label for="name" class="form-label">Name</label>
               <input type="name" class="form-control" id="name" />
             </div>
             <div class="mb-3">
@@ -145,11 +145,11 @@
               <input type="email" class="form-control" id="email" placeholder="name@example.com" />
             </div>
             <div class="mb-3">
-              <label for="pesan" class="form-label">Pesan</label>
-              <textarea class="form-control" id="pesan" rows="3"></textarea>
+              <label for="message" class="form-label">Message</label>
+              <textarea class="form-control" id="message" rows="3"></textarea>
             </div>
             <div class="mb-3">
-              <button class="btn btn-primary" type="submit">Kirim</button>
+              <button class="btn btn-primary" type="submit">Send</button>
             </div>
           </div>
         </div>
