--- a/index.html
+++ b/index.html
@@ -127,41 +127,43 @@
     <!-- Project Start -->
 
     <!-- Contact Start -->
-    <div id="contact" class="contact" style="background-color: #ffd700; padding-top: 60px">
-      <div class="container">
-        <div class="row text-center">
-          <div class="col">
-            <h2>Contact Me</h2>
-          </div>
-        </div>
-        <div class="row p-3 justify-content-center">
-          <div class="col-6">
-            <div class="mb-3">
-              <label for="name" class="form-label">Name</label>
-              <input type="name" class="form-control" id="name" />
-            </div>
-            <div class="mb-3">
-              <label for="email" class="form-label">Email</label>
-              <input type="email" class="form-control" id="email" placeholder="name@example.com" />
-            </div>
-            <div class="mb-3">
-              <label for="message" class="form-label">Message</label>
-              <textarea class="form-control" id="message" rows="3"></textarea>
-            </div>
-            <div class="mb-3">
-              <button class="btn btn-primary" type="submit">Send</button>
+    <form action="https://formspree.io/f/manwywll" method="post">
+      <div id="contact" class="contact" style="background-color: #ffd700; padding-top: 60px">
+        <div class="container">
+          <div class="row text-center">
+            <div class="col">
+              <h2>Contact Me</h2>
             </div>
           </div>
+          <div class="row p-3 justify-content-center">
+            <div class="col-6">
+              <div class="mb-3">
+                <label for="name" class="form-label">Name</label>
+                <input type="name" class="form-control" id="name" name="name" />
+              </div>
+              <div class="mb-3">
+                <label for="email" class="form-label">Email</label>
+                <input type="email" class="form-control" id="email" name="email" placeholder="name@example.com" />
+              </div>
+              <div class="mb-3">
+                <label for="message" class="form-label">Message</label>
+                <textarea class="form-control" id="message" name="message" rows="3"></textarea>
+              </div>
+              <div class="mb-3">
+                <button class="btn btn-primary" type="submit">Send</button>
+              </div>
+            </div>
+          </div>
         </div>
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320" style="margin-bottom: -5px">
+          <path
+            fill="#48494b"
+            fill-opacity="1"
+            d="M0,128L34.3,106.7C68.6,85,137,43,206,58.7C274.3,75,343,149,411,165.3C480,181,549,139,617,138.7C685.7,139,754,181,823,186.7C891.4,192,960,160,1029,154.7C1097.1,149,1166,171,1234,149.3C1302.9,128,1371,64,1406,32L1440,0L1440,320L1405.7,320C1371.4,320,1303,320,1234,320C1165.7,320,1097,320,1029,320C960,320,891,320,823,320C754.3,320,686,320,617,320C548.6,320,480,320,411,320C342.9,320,274,320,206,320C137.1,320,69,320,34,320L0,320Z"
+          ></path>
+        </svg>
       </div>
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320" style="margin-bottom: -5px">
-        <path
-          fill="#48494b"
-          fill-opacity="1"
-          d="M0,128L34.3,106.7C68.6,85,137,43,206,58.7C274.3,75,343,149,411,165.3C480,181,549,139,617,138.7C685.7,139,754,181,823,186.7C891.4,192,960,160,1029,154.7C1097.1,149,1166,171,1234,149.3C1302.9,128,1371,64,1406,32L1440,0L1440,320L1405.7,320C1371.4,320,1303,320,1234,320C1165.7,320,1097,320,1029,320C960,320,891,320,823,320C754.3,320,686,320,617,320C548.6,320,480,320,411,320C342.9,320,274,320,206,320C137.1,320,69,320,34,320L0,320Z"
-        ></path>
-      </svg>
-    </div>
+    </form>
     <!-- Contact End -->
 
     <!-- Footer Start -->
