--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>My Portfolio | Deny Arsyad</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
-    <!-- <link rel="stylesheet" href="style.css" /> -->
+    <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
   </head>
   <body id="home">
@@ -37,7 +37,7 @@
     <!-- Nav End -->
 
     <!-- Jumbo Start -->
-    <div class="jumbotron text-white text-center" style="background-color: #48494b; padding-top: 100px">
+    <div class="jumbotron text-white text-center">
       <img src="./img/denySquare.png" alt="deny arsyad" width="200px" class="rounded-circle img-thumbnail" />
       <h1>Deny Arsyad</h1>
       <p>IT-Software</p>
@@ -52,7 +52,7 @@
     <!-- Jumbo End -->
 
     <!-- About Start -->
-    <div id="about" class="about text-center" style="background-color: #ffd700; padding-top: 60px">
+    <div id="about" class="about text-center">
       <div class="container">
         <div class="row">
           <div class="col">
@@ -61,13 +61,13 @@
         </div>
         <div class="row p-3 justify-content-center fs-4">
           <div class="col-md-5 d-flex align-items-stretch">
-            <p>
+            <p class="pLeft">
               Outside of work, I enjoy exercising and going to the gym, or socializing with friends. These activities keep me inspired and energized, fueling my creativity in professional endeavors. I believe in maintaining a balanced life
               to foster both personal and professional growth.
             </p>
           </div>
           <div class="col-md-5">
-            <p>I'm always open to new opportunities and collaborations. Whether you have a project in mind, need some advice, or just want to connect, feel free to contact me. Let's create something amazing together!</p>
+            <p class="pRight">I'm always open to new opportunities and collaborations. Whether you have a project in mind, need some advice, or just want to connect, feel free to contact me. Let's create something amazing together!</p>
           </div>
         </div>
       </div>
@@ -82,7 +82,7 @@
     <!-- About End -->
 
     <!-- Project Start -->
-    <div id="projects" class="projects text-center" style="background-color: #48494b; color: white; padding-top: 60px">
+    <div id="projects" class="projects text-center">
       <div class="container">
         <div class="row">
           <div class="col">
@@ -128,7 +128,7 @@
 
     <!-- Contact Start -->
     <form action="https://formspree.io/f/manwywll" method="post">
-      <div id="contact" class="contact" style="background-color: #ffd700; padding-top: 60px">
+      <div id="contact" class="contact">
         <div class="container">
           <div class="row text-center">
             <div class="col">
@@ -185,5 +185,7 @@
     <!-- Footer End -->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="./script.js"></script>
   </body>
 </html>
